--- a/NoFood/NoFood.Ionic/src/pages/login/login.html
+++ b/NoFood/NoFood.Ionic/src/pages/login/login.html
@@ -4,17 +4,41 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>login</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
 <ion-content padding>
-  <button ion-button block (click)="abrirCategoria()">
-    Efetuar Login
-  </button>
+
+  <div class="logo">
+    <img src="/assets/imagens/icon-branco.png" alt="">
+    <span>NoFood</span>
+  </div>
+
+  <ion-list no-lines >
+    <ion-item>
+      <ion-input type="text" placeholder="E-mail"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-input type="password" placeholder="Senha" ></ion-input>
+    </ion-item>
+  </ion-list>
+
+  <ion-grid>
+    <ion-row>
+      <button ion-button block round color="secondary" (click)="abrirCategoria()">
+        Efetuar Login
+      </button>
+    </ion-row>
+    <ion-row>
+      <button ion-button block outline round color="secondary">
+        Cadastrar-se
+      </button>
+    </ion-row>
+  </ion-grid>
+
+  <ion-grid>
+    <ion-row>
+      <button ion-button block clear color="light">
+        Administrar Cadastros
+      </button>
+    </ion-row>
+  </ion-grid>    
+
 </ion-content>
