--- a/NoFood/NoFood.Ionic/src/pages/login/login.html
+++ b/NoFood/NoFood.Ionic/src/pages/login/login.html
@@ -4,14 +4,14 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-content padding>
+<ion-content padding class="backImage">
 
   <div class="logo">
     <img src="/assets/imagens/icon-branco.png" alt="">
     <span>NoFood</span>
   </div>
 
-  <ion-list no-lines >
+  <ion-list no-lines class="list-transparent">
     <ion-item>
       <ion-input [(ngModel)]="form.email" type="text" placeholder="E-mail"></ion-input>
     </ion-item>
@@ -27,7 +27,7 @@
       </button>
     </ion-row>
     <ion-row>
-      <button ion-button block outline round color="secondary">
+      <button ion-button block outline round color="secondary" (click)="cadastrar()">
         Cadastrar-se
       </button>
     </ion-row>
