--- a/NoFood/NoFood.Ionic/src/pages/categoria/categoria.html
+++ b/NoFood/NoFood.Ionic/src/pages/categoria/categoria.html
@@ -14,5 +14,6 @@
 
 
 <ion-content no-padding>
-  <button ion-button block color="primary" (click)="gerenciarCategoria()">Gerenciar Categoria</button>
+  <button ion-button block color="primary" (click)="gerenciarCategoria()">Gerenciar Categorias</button>
+  <button ion-button block color="primary" (click)="gerenciarProduto()">Gerenciar Produtos</button>
 </ion-content>
