--- a/NoFood/NoFood.Ionic/src/pages/adm-produtos/adm-produtos.html
+++ b/NoFood/NoFood.Ionic/src/pages/adm-produtos/adm-produtos.html
@@ -20,7 +20,7 @@
 
 <ion-content no-padding>
 
-  <ion-list lines>
+  <ion-list lines *ngIf="!isLoading">
     <ion-item text-wrap *ngIf="lista.length == 0">
       Você não tem nenhum produto cadastrado.
     </ion-item>
