--- a/NoFood/NoFood.Ionic/src/pages/categoria/categoria.html
+++ b/NoFood/NoFood.Ionic/src/pages/categoria/categoria.html
@@ -4,16 +4,27 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>categoria</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
 
 <ion-content no-padding>
-  <button ion-button block color="primary" (click)="gerenciarCategoria()">Gerenciar Categorias</button>
-  <button ion-button block color="primary" (click)="gerenciarProduto()">Gerenciar Produtos</button>
+  <!-- <button ion-button block color="primary" (click)="gerenciarCategoria()">Gerenciar Categorias</button>
+  <button ion-button block color="primary" (click)="gerenciarProduto()">Gerenciar Produtos</button> -->
+
+  <div class="admin">
+    <button ion-button icon-only clear color="light" (click)="adminOptions()">
+      <ion-icon name="settings"></ion-icon>
+    </button>
+  </div>
+
+  <div class="blur"></div>
+
+  <p class="chamada">O que deseja comer hoje?</p>
+
+  <div class="categoria" *ngFor="let item of categorias">
+    <div class="image" [ngStyle]="{'background-image': 'url(' + item.foto + ')'}">
+
+    </div>
+    <p>
+      {{ item.titulo }}
+    </p>
+  </div>
 </ion-content>
