--- a/NoFood/NoFood.Ionic/src/pages/produtos/produtos.html
+++ b/NoFood/NoFood.Ionic/src/pages/produtos/produtos.html
@@ -4,15 +4,48 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>produtos</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
 
 <ion-content padding>
+  
+  <div class="topo"></div>
+  
+  <div class="titulo">
+    <p>{{ categoriaSelecionada.titulo }}</p>
+    <div class="cart">
+      <ion-icon name="cart"></ion-icon>
+      <span>0 Itens</span>
+    </div>
+  </div>
+  
+  <div class="produtos">
+    <div class="produto">
+      <div class="imagem"></div>
+      <div class="titulo">Produto</div>
+      <div class="descricao">Descrição do Produto</div>
+      <div class="preco"><span>R$</span>50,00</div>
+      <div class="quantidade"></div>
+    </div>
+    <div class="produto">
+      <div class="imagem"></div>
+      <div class="titulo">Produto</div>
+      <div class="descricao">Descrição do Produto</div>
+      <div class="preco"><span>R$</span>50,00</div>
+      <div class="quantidade"></div>
+    </div>
+    <div class="produto">
+      <div class="imagem"></div>
+      <div class="titulo">Produto</div>
+      <div class="descricao">Descrição do Produto</div>
+      <div class="preco"><span>R$</span>50,00</div>
+      <div class="quantidade"></div>
+    </div>
+    <div class="produto">
+      <div class="imagem"></div>
+      <div class="titulo">Produto</div>
+      <div class="descricao">Descrição do Produto</div>
+      <div class="preco"><span>R$</span>50,00</div>
+      <div class="quantidade"></div>
+    </div>
+  </div>
 
 </ion-content>
