--- a/NoFood/NoFood.Ionic/src/pages/categoria/categoria.html
+++ b/NoFood/NoFood.Ionic/src/pages/categoria/categoria.html
@@ -19,7 +19,7 @@
 
   <p class="chamada">O que deseja comer hoje?</p>
 
-  <div class="categoria" *ngFor="let item of categorias" (click)="selecionarProduto(item)">
+  <div class="categoria" *ngFor="let item of categorias | orderBy:'titulo'" (click)="selecionarProduto(item)">
     <div class="image" [ngStyle]="{'background-image': 'url(' + item.foto + ')'}">
 
     </div>
