--- a/NoFood/NoFood.Ionic/src/pages/minha-conta/minha-conta.html
+++ b/NoFood/NoFood.Ionic/src/pages/minha-conta/minha-conta.html
@@ -4,16 +4,23 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
 
-  <ion-navbar>
-    <ion-title>minhaConta</ion-title>
-  </ion-navbar>
+<ion-content no-padding>
 
-</ion-header>
+  <div class="topo"></div>
+  <div class="titulo">Minha Conta</div>
+  <div class="image" [ngStyle]="{'background-image': 'url(' + usuarioLogado.foto + ')'}" (click)="mudarFoto()">
 
+  </div>
+  <div class="formulario">
+    <input type="text" placeholder="Nome" [(ngModel)]="usuarioLogado.nome">
+    <input type="text" placeholder="Email" [(ngModel)]="usuarioLogado.email">
+    <input type="number" placeholder="Telefone" [(ngModel)]="usuarioLogado.telefone">
 
-<ion-content padding>
+    <div class="botao">
+      <button ion-button outline color="primary" round block (click)="salvar()">Salvar os Dados</button>
+    </div>
+  </div>
 
 </ion-content>
 
